--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ h1 {
     text-align: center;
     font-family: 'Brush Script MT', 'Lucida Handwriting', cursive;
     font-size: 48px;
-    color: rgb(47, 101, 19);
+    color: goldenrod;
 }
 
 a {
